--- a/GetHealthy/Info.plist
+++ b/GetHealthy/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>Your health record will be used for personalised advice</string>
 	<key>NSHealthShareUsageDescription</key>
 	<string>Your health data is used to suggest new workout and exercises.</string>
 	<key>UIApplicationSceneManifest</key>
